# Core

./: .travis.yml  CMakeLists.txt  PreLoad.cmake  README  README.md  issue_template.md  revision_data.h.in.cmake
src/: CMakeLists.txt
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc  resource.h
src/server/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h
src/server/authserver/PrecompiledHeaders/: authPCH.cpp  authPCH.h
src/server/authserver/Realms/: RealmList.cpp  RealmList.h
src/server/authserver/Server/: AuthSocket.cpp  (+4 more)
src/server/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  VMapDefinitions.h  VMapTools.h
src/server/game/: CMakeLists.txt
src/server/scripts/: CMakeLists.txt
src/server/shared/: AutoPtr.h  CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Containers.h  Define.h  SystemConfig.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  worldserver.conf.dist  worldserver.rc
src/tools/: CMakeLists.txt
src/tools/map_extractor/: CMakeLists.txt  System.cpp  adt.cpp  adt.h  dbcfile.cpp  dbcfile.h  mpq_libmpq.cpp  mpq_libmpq04.h
src/tools/vmap_assembler/: CMakeLists.txt  VMapAssembler.cpp
src/tools/vmap_extractor/: CMakeLists.txt  adtfile.cpp  adtfile.h  dbcfile.cpp  dbcfile.h  model.cpp  model.h  modelheaders.h  mpq_libmpq.cpp  mpq_libmpq04.h  vec3d.h  vmapexport.cpp  vmapexport.h  wdtfile.cpp  wdtfile.h  wmo.cpp  wmo.h
(+853 files in other folders)
